# kaidame

./: Cargo.toml  LICENSE  README.md  flake.nix  versions.json
pkgs/: jellyfin.nix  radarr.nix  sonarr.nix  updater.nix
src/: jellyfin.rs  main.rs  radarr.rs  sonarr.rs  utils.rs
