[package]
name = "updater"
version = "0.1.0"
authors = ["Winter <winter@winter.cafe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
git2 = "0.13.17"
hex = "0.4.2"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
sha2 = "0.9.3"
tempfile = "3.2.0"
ureq = { version = "2.0.2", features = ["json"] }
