[package]
name = "updater"
version = "0.1.0"
authors = ["Winter <winter@winter.cafe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
base64 = "0.13.0"
git2 = "0.13.18"
hex = "0.4.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
sha2 = "0.9.4"
tempfile = "3.2.0"
ureq = { version = "2.1.1", features = ["json"] }
