[package]
name = "updater"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
base64 = "0.13.0"
git2 = "0.13.23"
hex = "0.4.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
sha2 = "0.9.8"
tempfile = "3.2.0"
ureq = { version = "2.3.0", features = ["json"] }
